# wx_cmake_fetchcontent_template-main

./: CMakeLists.txt  README.md  extractor.cpp  extractor.h  main.cpp
